Refactored properties. Created a maven build configuration with dependencies.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ redis.cluster.master3.port=6379
 redis.cluster.slave3.host=10.0.0.231
 redis.cluster.slave3.port=6479
 
-threads=8
-num_of_queries=10
+count.threads=8
+count.queries=10
