--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ redis.cluster.master3.port=6379
 redis.cluster.slave3.host=15.161.132.255
 redis.cluster.slave3.port=6479
 
-count.threads=10
-count.queries=20000
+count.threads=16
+count.queries=2000000
