--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ redis.cluster.slave3.host=15.161.132.255
 redis.cluster.slave3.port=6479
 
 count.threads=16
-count.queries=2000000
+count.queries=2000
