--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ redis.cluster.master3.port=6379
 redis.cluster.slave3.host=15.161.132.255
 redis.cluster.slave3.port=6479
 
-count.threads=16
-count.queries=2000000
+count.threads=8
+count.queries=200
 
 
 memcached.servers="15.161.159.56:11211 15.161.189.166:11211 15.161.153.91:11211"
