--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.source>11</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mainClass>io.yelp.project.Main</mainClass>
+        <mainClass>io.yelp.project.memcached.Main</mainClass>
     </properties>
 
     <dependencies>
